[tool.poetry]
name = "budget_book_backend"
version = "0.1.0"
description = "Budget Books: A Flask app for personal finance and budgeting."
authors = ["Lukas <Lukas.Erekson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
sqlalchemy = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
