[tool.poetry]
name = "budget_book_backend"
version = "0.1.0"
description = "Budget Books: A Flask app for personal finance and budgeting."
authors = ["Lukas <Lukas.Erekson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
sqlalchemy = "^2.0.0"
pandas = "^2.0.0"
pandas-stubs = "^2.0.0.230412"

[tool.poetry.scripts]
backend = "budget_book_backend.backend:main"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
black = "^23.3.0"
mypy = "^1.2.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
